@@ -37,7 +37,6 @@ y no vuelve a abrir el menu, y parece que tampoco envia teclado a maquina emulad
 
 -Agregar incluir pthreadGC3.dll en ZEsarUX win
 
--Mejorar zoom 0.75. Color gris si medio negro?
 
 -que en menu de opciones si raton pulsa en ventana pero en zona que no hay opciones, no envie enter
 
@@ -1789,8 +1788,6 @@ Opcion desactivar colores que solo va en realvideo off:
 -Quitar atributos que se pueda aunque esté modo rainbow 
 -Quizá simplemente una paleta grayscale y cuando haga render final, que convierta valores rgb a gris
 
--Escalado 0.75. De cada 4 pixeles, los dos últimos hacer media de color.
- Usar colores gigascreen para eso, pues tienen todas las combinaciones. Setting activable para ese tipo de reducción o la normal
 
 -sdl2 peta con easter-egg en linux
 
